# software_engineering_tutorials

./: MY_STUDY_PLAN.md  Main.java  README.md  main.py
agent-app/: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent-app/docs/: architecture.md
agent-app/examples/: usage_examples.py
agent-app/scripts/: run_agent.py
agent-app/src/agent/: __init__.py  core.py  prompts.py  types.py
agent-app/src/api/: main.py
agent-app/src/api/routes/: __init__.py  chat.py  health.py
agent-app/src/llm/: __init__.py  client.py
agent-app/src/memory/: __init__.py  conversation.py
agent-app/src/tools/: __init__.py  base.py  registry.py
agent-app/src/tools/code_execution/: sandbox.py
agent-app/src/tools/database/: query.py
agent-app/src/tools/web_search/: tavily.py
agent-app/src/utils/: __init__.py  config.py  errors.py
agent-app/tests/: conftest.py
agent-app/tests/unit/: test_memory.py  test_tools.py
ai_for_code_tutorial/: 00-index.md  01-code-understanding-representation.md  02-code-generation-fundamentals.md  03-program-synthesis.md  README.md
ai_for_science_tutorial/: 00-index.md  README.md
ai_safety_ethics_tutorial/: 00-index.md  README.md
angular_tutorial/: README.md  cheat-sheet.md  quick-start.md
causal_ml_tutorial/: 00-index.md  README.md
computer_vision_tutorial/: 00-index.md  01-classical-cv-foundations.md  02-cnns-architectures.md  03-object-detection.md  04-segmentation.md  05-generative-models.md  06-3d-vision.md  07-video-understanding.md  (+3 more)
(+338 files in other folders)
