[tool.poetry]
name = "agent-app"
version = "0.1.0"
description = "Modern LLM Agent Application with Tool Calling"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.18.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
tenacity = "^8.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
